[package]
name    = "tower-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = { version = "1" }
futures            = { version = "0" }
tokio              = { version = "1", features = [ "full" ] }
tower              = { version = "0" }
tracing            = { version = "0" }
tracing-subscriber = { version = "0", features = [ "fmt", "json", "env-filter", "smallvec" ], default-features = false }

[dev-dependencies]
tower = { version = "0", features = [ "full" ] }
